--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,11 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: faisaljarkass
-  Date: 25/08/16
-  Time: 20:56
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!--<%&#45;&#45;-->
+  <!--Created by IntelliJ IDEA.-->
+  <!--User: faisaljarkass-->
+  <!--Date: 25/08/16-->
+  <!--Time: 20:56-->
+  <!--To change this template use File | Settings | File Templates.-->
+<!--&#45;&#45;%>-->
+<!--<%@ page contentType="text/html;charset=UTF-8" language="java" %>-->
 <html>
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,7 @@
 <H1 class="text-center">My First Web App</H1>
 
 <div class="wrapper">
-    <form class="form-signin" method="POST" action="MyServlet">
+    <form class="form-signin" method="POST" action="Login">
         <h2 class="form-signin-heading">Please login</h2>
         <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus=""/>
         <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
